<resources>
    <string name="app_name">Africa\'s Talking</string>
    <string name="action_settings">Settings</string>
    <string name="airtime">Airtime</string>
    <string name="amount">Amount</string>
    <string name="to">To</string>
    <string name="send">Send</string>
    <string name="sms">SMS</string>
    <string name="message">Message</string>
    <string name="hi_there">Hi There!</string>
</resources>
